# rust-elf-loader

./: .gitignore  Cargo.toml  Makefile
src/: lib.rs
utils/: loader.c  payload-asm.s  sample_payload.c
