[package]
name = "rust-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-try-from-primitive = "1.0.0"
derive_more = "0.99.17"
nom = "7.1.3"

[[bin]]
name = "info"
path = "src/bin/info.rs"

[lib]
name = "elfparse"
path = "src/lib.rs"
